--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,10 +24,16 @@
                                 <form class="loginForm d-flex flex-column pt-3 mx-auto" style="width:75%; min-width:300px;">
                                     <label for="docNumber">شماره پرونده: </label>
                                     <input type="text" name="docNumber" id="docNumber" value="" autofocus required>
+                                    <span id="docNumberError" class="mt-2 text-center text-danger">
+                                        
+                                    </span>
                                     <label for="Password" class="mt-3">کلمه عبور: </label>
                                     <input type="password" name="loginPassword" id="loginPassword" required>
                                     <img src="img/invisible.png" id="PassVisibilityImg" width="24px"
-                                        style="margin-top:-26px ;" alt="password visibility">
+                                    style="margin-top:-26px ;" alt="password visibility">
+                                    <span id="passwordError" class="mt-2 text-center text-danger">
+                                        
+                                    </span>
                                     <div class="d-block w-100 text-center">
                                         <input type="submit"
                                             class="loginSubmit px-lg-5 px-xl-5 px-md-2 py-1 mt-xl-5 mt-lg-4"
@@ -35,10 +41,9 @@
                                         <input type="button"
                                             class="passwordReset px-lg-5 px-xl-5 px-md-2 py-1 mt-xl-5 mt-lg-4"
                                             value="بازیابی رمز عبور" />
+                                        <p id="formError" class="mt-2 text-center text-danger">
+                                        </p>
                                     </div>
-                                    <% if(displayMessage){ %>
-                                        <span id="loginError" class="text-center"><%= message %></span>
-                                        <% } %>
                                 </form>
                             </div>
                         </div>
