--- a/views/mainPage.ejs
+++ b/views/mainPage.ejs
@@ -16,117 +16,27 @@
                 </div>
             </div>
             <div id="imagesSection">
+
                 <div id="imagesContainer" class="d-flex justify-content-center flex-wrap">
 
-                <!-- ======================================================================== -->
-                    <div class="imageCard">
-                        <span id="statusBadge">دیده نشده</span>
-                        <img src="img/teeth.jpg" width="100%" height="200px" alt="teethImages">
-                        <p>
-                            <i class="fa fa-download float-start m-3"></i>
-                            <p class="float-end imageDate">
-                                <span>تاریخ انتشار:</span>
-                                <span>15-4-1401</span>
-                            </p>
-                        </p>
-                    </div>
-                <!-- ======================================================================== -->                <!-- ======================================================================== -->
-                    <div class="imageCard">
-                        <span id="statusBadge">دیده نشده</span>
-                        <img src="img/teeth.jpg" width="100%" height="200px" alt="teethImages">
-                        <p>
-                            <i class="fa fa-download float-start m-3"></i>
-                            <p class="float-end imageDate">
-                                <span>تاریخ انتشار:</span>
-                                <span>15-4-1401</span>
-                            </p>
-                        </p>
-                    </div>
-                <!-- ======================================================================== -->                <!-- ======================================================================== -->
-                    <div class="imageCard">
-                        <span id="statusBadge">دیده نشده</span>
-                        <img src="img/teeth.jpg" width="100%" height="200px" alt="teethImages">
-                        <p>
-                            <i class="fa fa-download float-start m-3"></i>
-                            <p class="float-end imageDate">
-                                <span>تاریخ انتشار:</span>
-                                <span>15-4-1401</span>
-                            </p>
-                        </p>
-                    </div>
-                <!-- ======================================================================== -->                <!-- ======================================================================== -->
-                    <div class="imageCard">
-                        <span id="statusBadge">دیده نشده</span>
-                        <img src="img/teeth.jpg" width="100%" height="200px" alt="teethImages">
-                        <p>
-                            <i class="fa fa-download float-start m-3"></i>
-                            <p class="float-end imageDate">
-                                <span>تاریخ انتشار:</span>
-                                <span>15-4-1401</span>
-                            </p>
-                        </p>
-                    </div>
-                <!-- ======================================================================== -->                <!-- ======================================================================== -->
-                    <div class="imageCard">
-                        <span id="statusBadge">دیده نشده</span>
-                        <img src="img/teeth.jpg" width="100%" height="200px" alt="teethImages">
-                        <p>
-                            <i class="fa fa-download float-start m-3"></i>
-                            <p class="float-end imageDate">
-                                <span>تاریخ انتشار:</span>
-                                <span>15-4-1401</span>
-                            </p>
-                        </p>
-                    </div>
-                <!-- ======================================================================== -->                <!-- ======================================================================== -->
-                    <div class="imageCard">
-                        <span id="statusBadge">دیده نشده</span>
-                        <img src="img/teeth.jpg" width="100%" height="200px" alt="teethImages">
-                        <p>
-                            <i class="fa fa-download float-start m-3"></i>
-                            <p class="float-end imageDate">
-                                <span>تاریخ انتشار:</span>
-                                <span>15-4-1401</span>
-                            </p>
-                        </p>
-                    </div>
-                <!-- ======================================================================== -->                <!-- ======================================================================== -->
-                    <div class="imageCard">
-                        <span id="statusBadge">دیده نشده</span>
-                        <img src="img/teeth.jpg" width="100%" height="200px" alt="teethImages">
-                        <p>
-                            <i class="fa fa-download float-start m-3"></i>
-                            <p class="float-end imageDate">
-                                <span>تاریخ انتشار:</span>
-                                <span>15-4-1401</span>
-                            </p>
-                        </p>
-                    </div>
-                <!-- ======================================================================== -->                <!-- ======================================================================== -->
-                    <div class="imageCard">
-                        <span id="statusBadge">دیده نشده</span>
-                        <img src="img/teeth.jpg" width="100%" height="200px" alt="teethImages">
-                        <p>
-                            <i class="fa fa-download float-start m-3"></i>
-                            <p class="float-end imageDate">
-                                <span>تاریخ انتشار:</span>
-                                <span>15-4-1401</span>
-                            </p>
-                        </p>
-                    </div>
-                <!-- ======================================================================== -->                <!-- ======================================================================== -->
-                    <div class="imageCard">
-                        <span id="statusBadge">دیده نشده</span>
-                        <img src="img/teeth.jpg" width="100%" height="200px" alt="teethImages">
-                        <p>
-                            <i class="fa fa-download float-start m-3"></i>
-                            <p class="float-end imageDate">
-                                <span>تاریخ انتشار:</span>
-                                <span>15-4-1401</span>
-                            </p>
-                        </p>
-                    </div>
-                <!-- ======================================================================== -->
-                </div>
+                    <% if (imageList==[]) { %>
+                        <p> errororrrrr</p>
+                        <%} else { %>
+                            <% for(var i=0; i < imageList.length; i++) { %>
+                                <div class="imageCard">
+                                    <span id="statusBadge">دیده نشده</span>
+                                    <img src="<%= imageList[i] %>" width="100%" height="200px" alt="teethImages">
+                                    <p>
+                                        <i class="fa fa-download float-start m-3"></i>
+                                    <p class="float-end imageDate">
+                                        <span>تاریخ انتشار:</span>
+                                        <span>15-4-1401</span>
+                                    </p>
+                                    </p>
+                                </div>
+                                <% } %>
+                            <% } %>
+
+                  </div>
             </div>
         </section>
