--- a/public/css/mainPage.css
+++ b/public/css/mainPage.css
@@ -23,6 +23,7 @@
 
 #clinicTitle {
     font-size: 18px;
+    line-height: 10px;
 }
 
 #sickFullname {
@@ -50,7 +51,7 @@
 
 #imagesContainer div {
     border-radius: 10px;
-    border: 8px solid rgb(0, 195, 0);
+    border: 2px solid rgb(111, 111, 111);
     margin: 20px;
     width: 300px;
     height: auto;
@@ -80,14 +81,14 @@
     cursor: pointer;
 }
 
-#statusBadge {
+/* #statusBadge {
     position: absolute;
     top: 10px;
     left: 10px;
     background-color: rgb(0, 195, 0);
     padding: 2px 10px;
     border-radius: 5px;
-}
+} */
 
 .imageDate {
     margin-right: 10px;
@@ -105,4 +106,13 @@
     #sickFullname {
         font-size: 20px;
     }
+}
+
+#teethImages {
+    filter: contrast(70%);
+    transition: 300ms;
+}
+
+.imageCard:hover #teethImages {
+    filter: contrast(110%);
 }
