download image + reload location after 1 hour + delete images after 15 mins completed

--- a/public/css/mainPage.css
+++ b/public/css/mainPage.css
@@ -124,4 +124,5 @@
     background-color: rgb(236, 236, 236);
     border-radius: 10px;
     border: solid 2px rgb(121, 121, 121);
+    transition: all .5s ease;
 }
