--- a/views/includes/navbarSubMenu.ejs
+++ b/views/includes/navbarSubMenu.ejs
@@ -18,7 +18,7 @@
         </div>
     
         <div class="menuFooter text-center">
-            <p> <a href="#" class="btn btn-info py-1 px-3"> تغییر رمز عبور </a> </p>
+            <p> <a href="/changePassword" class="btn btn-info py-1 px-3"> تغییر رمز عبور </a> </p>
             <p> <a href="/logout" class="btn btn-secondary py-1 px-3"> خروج از حساب کاربری </a> </p>
         </div>
     
