--- a/views/login.ejs
+++ b/views/login.ejs
@@ -46,7 +46,7 @@
                                     </div>
                                     
                                     <% if(message) { %>
-                                        <div class="text-center">
+                                        <div class="text-center text-danger">
                                             <p> <%= message  %>  </p>    
                                         </div>
                                     <% } %>
