--- a/views/changePassword.ejs
+++ b/views/changePassword.ejs
@@ -16,11 +16,11 @@
                                     <label for="docNumber">شماره پرونده: </label>
                                     <input type="text" name="docNumber" id="docNumber">
 
-                                    <label for="oldPassword" class="mt-3">کلمه ی عبور قدیمی: </label>
-                                    <input type="password" name="oldPassword" id="oldPassword">
-                                    <img src="img/invisible.png" id="oldPassVisibility" width="24px"
-                                        style="margin-top:-26px ;" alt="password visibility">
-                                    <label for="oldPassword" class="mt-3">کلمه ی عبور جدید: </label>
+                                    <!-- <label for="oldPassword" class="mt-3">کلمه ی عبور قدیمی: </label> -->
+                                    <!-- <input type="password" name="oldPassword" id="oldPassword"> -->
+                                    <!-- <img src="img/invisible.png" id="oldPassVisibility" width="24px"
+                                        style="margin-top:-26px ;" alt="password visibility"> -->
+                                    <label for="newPassword" class="mt-3">کلمه ی عبور جدید: </label>
                                     <input type="password" name="newPassword" id="newPassword">
                                     <img src="img/invisible.png" id="newPassVisibility" width="24px"
                                         style="margin-top:-26px ;" alt="password visibility">
@@ -29,8 +29,8 @@
                                             class="resetPassSubmit px-lg-5 px-xl-5 px-md-2 py-1 mt-xl-5 mt-lg-4"
                                             value="تغییر کلمه ی عبور" />
                                     </div>
-                                    <span id="loginError" class="text-center">شماره پرونده یا کلمه عبور اشتباه
-                                        است</span>
+                                    <!-- <span id="changePasswordError" class="text-center">شماره پرونده یا کلمه عبور اشتباه
+                                        است</span> -->
                                 </form>
                             </div>
                         </div>
