--- a/views/mainPage.ejs
+++ b/views/mainPage.ejs
@@ -32,7 +32,7 @@
                                     <!-- <span id="statusBadge">دیده نشده</span> -->
                                     <img src="<%= imageList[i].imagePathFront %>" width="100%" height="200px" id="teethImages" alt="teethImages">
                                     <p>
-                                        <i class="fa fa-download float-start m-3"></i>
+                                        <i class="downloadBtn fa fa-download float-start m-3" onclick="downloadImage(this)"></i>
                                     <p class="float-end imageDate">
                                         <span>تاریخ انتشار:</span>
                                         <span id="day"><%= imageList[i].day %></span>
@@ -51,4 +51,11 @@
             <a id="back_to_top_btn"></a>
         <script src="js/backToTopBtnFunctionality.js" ></script>
         <script src="js/navbarSubMenu.js" ></script>
+        <script src="js/downloadImage.js" ></script>
+        <script> 
+        // reload page after 1h as the token expires in this time
+        setTimeout(() => {
+            location.reload();
+        }, 1000 * 60 * 60);
+        </script>
         </section>
