Local MongoDB database for saving user password has been added to chnage password button

--- a/views/changePassword.ejs
+++ b/views/changePassword.ejs
@@ -16,10 +16,10 @@
                                     <label for="docNumber">شماره پرونده: </label>
                                     <input type="text" name="docNumber" id="docNumber">
 
-                                    <!-- <label for="oldPassword" class="mt-3">کلمه ی عبور قدیمی: </label> -->
-                                    <!-- <input type="password" name="oldPassword" id="oldPassword"> -->
-                                    <!-- <img src="img/invisible.png" id="oldPassVisibility" width="24px"
-                                        style="margin-top:-26px ;" alt="password visibility"> -->
+                                    <label for="oldPassword" class="mt-3">کلمه ی عبور قدیمی: </label>
+                                    <input type="password" name="oldPassword" id="oldPassword">
+                                    <img src="img/invisible.png" id="oldPassVisibility" width="24px"
+                                        style="margin-top:-26px ;" alt="password visibility">
                                     <label for="newPassword" class="mt-3">کلمه ی عبور جدید: </label>
                                     <input type="password" name="newPassword" id="newPassword">
                                     <img src="img/invisible.png" id="newPassVisibility" width="24px"
@@ -29,8 +29,7 @@
                                             class="resetPassSubmit px-lg-5 px-xl-5 px-md-2 py-1 mt-xl-5 mt-lg-4"
                                             value="تغییر کلمه ی عبور" />
                                     </div>
-                                    <!-- <span id="changePasswordError" class="text-center">شماره پرونده یا کلمه عبور اشتباه
-                                        است</span> -->
+                                    <span id="changePasswordError" class="text-center"></span>
                                 </form>
                             </div>
                         </div>
@@ -42,5 +41,48 @@
     </body>
 
     <script src="js/firstPasswordVisibility.js"></script>
+    <script>
+        var form = document.querySelector(".loginFormInputs form");
+        var id_input = document.getElementById("docNumber");
+        var password_input = document.getElementById("newPassword");
+        var changePasswordError = document.getElementById("changePasswordError");
+
+            form.addEventListener('submit', async (e) => {
+                    e.preventDefault();
+
+                    let id = form.docNumber.value;
+                    let password = form.newPassword.value;
+
+                    try {
+                        const result = await fetch('/changePassword', {
+                            method: 'POST',
+                            body: JSON.stringify({ id, password }),
+                            headers: { 'Content-Type': 'application/json' }
+                        });
+
+                        const data = await result.json();
+                        console.log(data);
+
+                        if (data.errors) {
+                            // email_error.innerHTML = data.errors.email;
+                            // password_error.innerHTML = data.errors.password;
+                            changePasswordError.innerHTML = data.error;
+                            setTimeout(() => {
+                                changePasswordError.innerHTML = '';
+                            }, 3000);
+                        }
+                        if (data.userId) {
+                            password_input.value = "";
+                            id_input.value = "";
+                            location.assign('/');
+                        }
+
+                    }
+                    catch (err) {
+                        console.log(err);
+                    }
+
+                });
+    </script>
 
     </html>
