--- a/views/changePassword.ejs
+++ b/views/changePassword.ejs
@@ -13,24 +13,27 @@
                             <div class="loginFormInputs flex-fill">
                                 <form class="d-flex flex-column pt-3 mx-auto" style="width:75%; min-width:300px;"
                                     action="" method="">
-                                    <label for="docNumber">شماره پرونده: </label>
-                                    <input type="text" name="docNumber" id="docNumber">
-
                                     <label for="oldPassword" class="mt-3">کلمه ی عبور قدیمی: </label>
-                                    <input type="password" name="oldPassword" id="oldPassword">
+                                    <input type="password" name="oldPassword" id="oldPassword" required>
                                     <img src="img/invisible.png" id="oldPassVisibility" width="24px"
                                         style="margin-top:-26px ;" alt="password visibility">
+                                    <span id="oldpasswordError" class="text-center text-danger mt-2"></span>
                                     <label for="newPassword" class="mt-3">کلمه ی عبور جدید: </label>
-                                    <input type="password" name="newPassword" id="newPassword">
+                                    <input type="password" name="newPassword" id="newPassword" required>
                                     <img src="img/invisible.png" id="newPassVisibility" width="24px"
-                                        style="margin-top:-26px ;" alt="password visibility">
+                                    style="margin-top:-26px ;" alt="password visibility">
+                                    <span id="newPasswordError" class="text-center text-danger mt-2"></span>
                                     <div class="d-block w-100 text-center">
                                         <input type="submit"
                                             class="resetPassSubmit px-lg-5 px-xl-5 px-md-2 py-1 mt-xl-5 mt-lg-4"
                                             value="تغییر کلمه ی عبور" />
+                                        <p id="successMessage" class="text-center text-success mt-2"></p>
                                     </div>
-                                    <span id="changePasswordError" class="text-center"></span>
                                 </form>
+                                <div class="mainRedirect d-none">
+                                    <span class="loader"></span>
+                                    <span>چند لحظه ی دیگر به صفحه ی اصلی هدایت می شوید</span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -43,44 +46,67 @@
     <script src="js/firstPasswordVisibility.js"></script>
     <script>
         var form = document.querySelector(".loginFormInputs form");
-        var id_input = document.getElementById("docNumber");
         var password_input = document.getElementById("newPassword");
-        var changePasswordError = document.getElementById("changePasswordError");
+        var old_password_input = document.getElementById("oldPassword");
+
+        var oldpasswordError = document.getElementById("oldpasswordError");
+        var newPasswordError = document.getElementById("newPasswordError");
+        var successMessage = document.getElementById("successMessage");
+
+        var mainRedirect = document.querySelector(".mainRedirect");
 
             form.addEventListener('submit', async (e) => {
                     e.preventDefault();
 
-                    let id = form.docNumber.value;
                     let password = form.newPassword.value;
+                    let opassword = form.oldPassword.value;
 
-                    try {
-                        const result = await fetch('/changePassword', {
-                            method: 'POST',
-                            body: JSON.stringify({ id, password }),
-                            headers: { 'Content-Type': 'application/json' }
-                        });
+                    console.log(password, opassword);
 
-                        const data = await result.json();
-                        console.log(data);
-
-                        if (data.errors) {
-                            // email_error.innerHTML = data.errors.email;
-                            // password_error.innerHTML = data.errors.password;
-                            changePasswordError.innerHTML = data.error;
-                            setTimeout(() => {
-                                changePasswordError.innerHTML = '';
-                            }, 3000);
+                    if(password && opassword) {
+                        try {
+                            const result = await fetch('/changePassword', {
+                                method: 'POST',
+                                body: JSON.stringify({ password, opassword }),
+                                headers: { 'Content-Type': 'application/json' }
+                            });
+    
+                            const data = await result.json();
+    
+                            if (data) {
+                                console.log(data);
+                                newPasswordError.innerHTML = data.pass;
+                                oldpasswordError.innerHTML = data.oldpassword;
+                                successMessage.innerHTML = data.success;
+                                if (data.success) {
+                                    newPasswordError.innerHTML = "";
+                                    oldpasswordError.innerHTML = "";
+                                    password_input.value = "";
+                                    old_password_input.value = "";
+                                    mainRedirect.classList.remove("d-none")
+                                    setTimeout(() => {
+                                        mainRedirect.classList.add("d-none")
+                                        location.assign('/main');
+                                    }, 4000);
+                                }else {
+                                    setTimeout(() => {
+                                        successMessage.innerHTML = "";
+                                        newPasswordError.innerHTML = "";
+                                        oldpasswordError.innerHTML = "";
+                                        successMessage.innerHTML ="";
+                                    }, 3000);
+                                }
+                            }
+    
                         }
-                        if (data.userId) {
-                            password_input.value = "";
-                            id_input.value = "";
-                            location.assign('/');
+                        catch (err) {
+                            console.log(err);
                         }
+                    }
+                    else {
+                        alert("همه ی فیلد ها را پر کنید !!!")
+                    }
 
-                    }
-                    catch (err) {
-                        console.log(err);
-                    }
 
                 });
     </script>
