--- a/views/login.ejs
+++ b/views/login.ejs
@@ -38,17 +38,24 @@
                                         <input type="submit"
                                             class="loginSubmit px-lg-5 px-xl-5 px-md-2 py-1 mt-xl-5 mt-lg-4"
                                             value="ورود" />
+                                            <div class="mt-2">
+                                                <a href="/forget-password" style="text-decoration:none ;">فراموشی رمز عبور</a>
+                                            </div>
                                         <!-- <input type="button"
                                             class="passwordReset px-lg-5 px-xl-5 px-md-2 py-1 mt-xl-5 mt-lg-4"
-                                            value="بازیابی رمز عبور"
+                                            value="فراموشی رمز عبور"
                                              /> -->
                                         <p id="formError" class="mt-2 text-center text-danger">
                                         </p>
                                     </div>
-                                    
-                                    <div class="text-center text-danger errorMsg">
-                                        <p> <%= message  %>  </p>    
-                                    </div>
+                                    <% if(message) { %>
+                                        <div class="alert alert-danger">
+                                            <!-- <button type="button" class="close" data-dismiss="alert"> -->
+                                            <img src="/img/close.png" width="20px" alt="x" onclick="closeMessageBox(this)">
+                                        <!-- </button> -->
+                                            <%- message %>
+                                        </div>
+                                    <% } %>
                                 </form>
                             </div>
                         </div>
