--- a/views/login.ejs
+++ b/views/login.ejs
@@ -35,9 +35,11 @@
                                         
                                     </span>
                                     <div class="d-block w-100 text-center">
-                                        <input type="submit"
-                                            class="loginSubmit px-lg-5 px-xl-5 px-md-2 py-1 mt-xl-5 mt-lg-4"
-                                            value="ورود" />
+                                        <button type="submit"
+                                            class="loginSubmit px-lg-5 px-xl-5 px-md-2 py-1 mt-xl-5 mt-lg-4">
+                                            ورود
+                                            <i class="fa fa-spinner fa-spin loginSpinner d-none" style="font-size:18px; color:white"></i>
+                                        </button>
                                             <div class="mt-2">
                                                 <a href="/forget-password" style="text-decoration:none ;">فراموشی رمز عبور</a>
                                             </div>
