--- a/views/changePassword.ejs
+++ b/views/changePassword.ejs
@@ -11,18 +11,27 @@
                                 <h3 class="text-center" style="color:#727A80; font-weight: bold;">تغییر کلمه ی عبور</h3>
                             </div>
                             <div class="loginFormInputs flex-fill">
-                                <form class="d-flex flex-column pt-3 mx-auto" style="width:75%; min-width:300px;"
-                                    action="" method="">
-                                    <label for="oldPassword" class="mt-3">کلمه ی عبور قدیمی: </label>
-                                    <input type="password" name="oldPassword" id="oldPassword" required>
-                                    <img src="img/invisible.png" id="oldPassVisibility" width="24px"
-                                        style="margin-top:-26px ;" alt="password visibility">
-                                    <span id="oldpasswordError" class="text-center text-danger mt-2"></span>
+                                <form class="d-flex flex-column pt-3 mx-auto" style="width:75%; min-width:300px;">
+                                <div class="helpUser">
+                                    <ul>
+                                        <li>پسورد جدید شما باید حداقل 6 کاراکتر داشته باشد</li>
+                                        <li>بهتر است پسورد شما شامل حروف بزرگ و کوچک و نماد ها و همچنین اعداد باشد</li>
+                                    </ul>
+                                </div>
+
                                     <label for="newPassword" class="mt-3">کلمه ی عبور جدید: </label>
                                     <input type="password" name="newPassword" id="newPassword" required>
                                     <img src="img/invisible.png" id="newPassVisibility" width="24px"
                                     style="margin-top:-26px ;" alt="password visibility">
                                     <span id="newPasswordError" class="text-center text-danger mt-2"></span>
+
+                                    <label for="confirmNewPassword" class="mt-3">تکرار کلمه ی عبور جدید:</label>
+                                    <input type="password" name="confirmNewPassword" id="confirmNewPassword" required>
+                                    <img src="img/invisible.png" id="confirmNewPassVisibility" width="24px"
+                                    style="margin-top:-26px ;" alt="confirm password visibility">
+                                    <span id="confirmNewPasswordError" class="text-center text-danger mt-2"></span>
+
+
                                     <div class="d-block w-100 text-center">
                                         <input type="submit"
                                             class="resetPassSubmit px-lg-5 px-xl-5 px-md-2 py-1 mt-xl-5 mt-lg-4"
@@ -47,9 +56,6 @@
     <script>
         var form = document.querySelector(".loginFormInputs form");
         var password_input = document.getElementById("newPassword");
-        var old_password_input = document.getElementById("oldPassword");
-
-        var oldpasswordError = document.getElementById("oldpasswordError");
         var newPasswordError = document.getElementById("newPasswordError");
         var successMessage = document.getElementById("successMessage");
 
@@ -59,15 +65,15 @@
                     e.preventDefault();
 
                     let password = form.newPassword.value;
-                    let opassword = form.oldPassword.value;
+                    // let opassword = form.oldPassword.value;
 
-                    console.log(password, opassword);
+                    // console.log(password, opassword);
 
-                    if(password && opassword) {
+                    if(password) {
                         try {
                             const result = await fetch('/changePassword', {
                                 method: 'POST',
-                                body: JSON.stringify({ password, opassword }),
+                                body: JSON.stringify({ password }),
                                 headers: { 'Content-Type': 'application/json' }
                             });
     
@@ -76,13 +82,10 @@
                             if (data) {
                                 console.log(data);
                                 newPasswordError.innerHTML = data.pass;
-                                oldpasswordError.innerHTML = data.oldpassword;
                                 successMessage.innerHTML = data.success;
                                 if (data.success) {
                                     newPasswordError.innerHTML = "";
-                                    oldpasswordError.innerHTML = "";
                                     password_input.value = "";
-                                    old_password_input.value = "";
                                     mainRedirect.classList.remove("d-none")
                                     setTimeout(() => {
                                         mainRedirect.classList.add("d-none")
@@ -92,7 +95,6 @@
                                     setTimeout(() => {
                                         successMessage.innerHTML = "";
                                         newPasswordError.innerHTML = "";
-                                        oldpasswordError.innerHTML = "";
                                         successMessage.innerHTML ="";
                                     }, 3000);
                                 }
