--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,11 +12,11 @@
                                 </h3>
                                 <div class="helpUser">
                                     <ul>
-                                        <li>کلمه عبور در ابتدا، همان شماره تماس شما بدون صفر می باشد</li>
-                                        <li>در صورت مواجه با خطای ثبت نشدن شماره تماس، به حسابداری مراجعه کنید</li>
-                                        <!-- <li>با ورود به صفحه ی کاربری خود، می توانید کلمه ی عبور خود را تغییر دهید</li> -->
-                                        <!-- <li>در صورت فراموشی رمز عبور، دکمه ی بازیابی کلمه عبور را بزنید تا شماره تماس
-                                            شما رمز عبورتان شود</li> -->
+                                        <li>کلمه ی عبور شما در ابتدا شماره ثابت و یا شماره ی موبایلی هست که در کلینیک ثبت کرده اید</li>
+                                        <li>شماره ثابت را بدون پیشوند و خط فاصله بنویسید (مثلا 77594621)</li>
+                                        <li>شماره موبایلتان را بدون پیشوند و خط فاصله و +98 بنویسید (مثلا 9125849856)</li>
+                                        <li>در صورت مواجه با خطای ثبت نشدن شماره تماس، با شماره 02177564921 تماس بگیرید و بخواهید شماره تماس شما را در سیستم ثبت کنند</li>
+                                        <li>با ورود به صفحه ی کاربری خود، می توانید کلمه ی عبور خود را تغییر دهید</li>
                                     </ul>
                                 </div>
                             </div>
@@ -53,7 +53,7 @@
                                     <% if(message) { %>
                                         <div class="alert alert-danger">
                                             <!-- <button type="button" class="close" data-dismiss="alert"> -->
-                                            <img src="/img/close.png" width="20px" alt="x" onclick="closeMessageBox(this)">
+                                            <img src="/img/close.png" width="20px" alt="x" style="cursor:pointer;" onclick="closeMessageBox(this)">
                                         <!-- </button> -->
                                             <%- message %>
                                         </div>
