delete phone prefix added

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,10 +13,10 @@
                                 <div class="helpUser">
                                     <ul>
                                         <li>کلمه ی عبور شما در ابتدا شماره ثابت و یا شماره ی موبایلی هست که در کلینیک ثبت کرده اید</li>
-                                        <li>شماره ثابت را بدون پیشوند و خط فاصله بنویسید (مثلا 77594621)</li>
-                                        <li>شماره موبایلتان را بدون پیشوند و خط فاصله و +98 بنویسید (مثلا 9125849856)</li>
+                                        <li>شماره ثابت 7 یا 8 رقمی است که باید آنرا بدون پیشوند و خط فاصله و هیچگونه علامتی بنویسید (مثلا 77594621)</li>
+                                        <li>شماره موبایلتان را با پیش شماره و بدون خط فاصله و 98+ بنویسید (مثلا 09125849856)</li>
                                         <li>در صورت مواجه با خطای ثبت نشدن شماره تماس، با شماره 02177564921 تماس بگیرید و بخواهید شماره تماس شما را در سیستم ثبت کنند</li>
-                                        <li>با ورود به صفحه ی کاربری خود، می توانید کلمه ی عبور خود را تغییر دهید</li>
+                                        <li>با ورود به صفحه ی کاربری خود، بهتر است برای امنیت بیشتر، کلمه ی عبور خود را تغییر دهید</li>
                                     </ul>
                                 </div>
                             </div>
@@ -36,7 +36,7 @@
                                     </span>
                                     <div class="d-block w-100 text-center">
                                         <button type="submit"
-                                            class="loginSubmit px-lg-5 px-xl-5 px-md-2 py-1 mt-xl-5 mt-lg-4">
+                                            class="loginSubmit px-lg-5 px-xl-5 px-md-3 px-3 py-1 mt-xl-5 mt-lg-4">
                                             ورود
                                             <i class="fa fa-spinner fa-spin loginSpinner d-none" style="font-size:18px; color:white"></i>
                                         </button>
@@ -51,7 +51,7 @@
                                         </p>
                                     </div>
                                     <% if(message) { %>
-                                        <div class="alert alert-danger">
+                                        <div class="alert alert-danger noImageFoundError">
                                             <!-- <button type="button" class="close" data-dismiss="alert"> -->
                                             <img src="/img/close.png" width="20px" alt="x" style="cursor:pointer;" onclick="closeMessageBox(this)">
                                         <!-- </button> -->
