--- a/views/forgetPassword.ejs
+++ b/views/forgetPassword.ejs
@@ -32,7 +32,7 @@
                                     </span>
                                     <div class="d-block w-100 text-center">
                                         <input type="submit"
-                                            class="forgetPassSubmit px-lg-5 px-xl-5 px-md-2 py-1 mt-xl-5 mt-lg-4"
+                                            class="forgetPassSubmit px-lg-5 px-xl-5 px-md-2 px-2 py-1 mt-xl-5 mt-lg-4"
                                             value="احراز هویت" />
 
                                         <p id="formErr" class="mt-2 text-center text-danger">
