a help user message in login page changed

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
                                     <ul>
                                         <li>کلمه ی عبور شما در ابتدا شماره ثابت و یا شماره ی موبایلی هست که در کلینیک ثبت کرده اید</li>
                                         <li>شماره ثابت 7 یا 8 رقمی است که باید آنرا بدون پیشوند و خط فاصله و هیچگونه علامتی بنویسید (مثلا 77594621)</li>
-                                        <li>شماره موبایلتان را با پیش شماره و بدون خط فاصله و 98+ بنویسید (مثلا 09125849856)</li>
+                                        <li>شماره موبایلتان را با پیش شماره و بدون خط فاصله و صفر و 98+ بنویسید (مثلا 9125849856)</li>
                                         <li>در صورت مواجه با خطای ثبت نشدن شماره تماس، با شماره 02177564921 تماس بگیرید و بخواهید شماره تماس شما را در سیستم ثبت کنند</li>
                                         <li>با ورود به صفحه ی کاربری خود، بهتر است برای امنیت بیشتر، کلمه ی عبور خود را تغییر دهید</li>
                                     </ul>
