slider in clinic information layout added

--- a/views/layouts/clinicInformation.ejs
+++ b/views/layouts/clinicInformation.ejs
@@ -16,7 +16,8 @@
         </span>
       </div>
       <div class="flex-fill text-center">
-        <img src="img/clinic.jpg" id="clinicImage" alt="ClinicImg" />
+        <!-- <img src="img/clinic.jpg" id="clinicImage" alt="ClinicImg" /> -->
+        <%- include('../includes/slider.ejs') %>
       </div>
       <div class="text-center flex-fill mt-3">
         <p>
