some isuues resolved

--- a/views/changePassword.ejs
+++ b/views/changePassword.ejs
@@ -13,7 +13,8 @@
                             <div class="loginFormInputs flex-fill">
                                 <form class="d-flex flex-column pt-3 mx-auto" style="width:75%; min-width:300px;">
                                 <div class="helpUser">
-                                    <ul>
+                                    <ul class="text-success">
+                                        <li>در هنگام پر کردن فیلد ها مطمئن شوید کیبورد شما انگلیسی باشد</li>
                                         <li>پسورد جدید شما باید حداقل 6 کاراکتر داشته باشد</li>
                                         <li>بهتر است پسورد شما شامل حروف بزرگ و کوچک و نماد ها و همچنین اعداد باشد</li>
                                     </ul>
@@ -34,7 +35,7 @@
 
                                     <div class="d-block w-100 text-center">
                                         <input type="submit"
-                                            class="resetPassSubmit px-lg-5 px-xl-5 px-md-2 py-1 mt-xl-5 mt-lg-4"
+                                            class="resetPassSubmit px-5 py-1 mt-4 mt-xl-5 mt-lg-4"
                                             value="تغییر کلمه ی عبور" />
                                         <p id="successMessage" class="text-center text-success mt-2"></p>
                                     </div>
@@ -56,6 +57,8 @@
     <script>
         var form = document.querySelector(".loginFormInputs form");
         var password_input = document.getElementById("newPassword");
+        // var confirmNewPassword = document.getElementById("confirmNewPassword");
+        var confirmNewPasswordError = document.getElementById("confirmNewPasswordError");
         var newPasswordError = document.getElementById("newPasswordError");
         var successMessage = document.getElementById("successMessage");
 
@@ -65,26 +68,27 @@
                     e.preventDefault();
 
                     let password = form.newPassword.value;
-                    // let opassword = form.oldPassword.value;
+                    let confirmPassword = form.confirmNewPassword.value;
 
-                    // console.log(password, opassword);
-
-                    if(password) {
+                    if(password && confirmPassword) {
+                        console.log(password === confirmPassword);
                         try {
                             const result = await fetch('/changePassword', {
                                 method: 'POST',
-                                body: JSON.stringify({ password }),
+                                body: JSON.stringify({ password, confirmPassword }),
                                 headers: { 'Content-Type': 'application/json' }
                             });
     
                             const data = await result.json();
     
                             if (data) {
-                                console.log(data);
+                                // console.log(data);
                                 newPasswordError.innerHTML = data.pass;
+                                confirmNewPasswordError.innerHTML = data.confirmPass;
                                 successMessage.innerHTML = data.success;
                                 if (data.success) {
                                     newPasswordError.innerHTML = "";
+                                    confirmNewPasswordError.innerHTML = "";
                                     password_input.value = "";
                                     mainRedirect.classList.remove("d-none")
                                     setTimeout(() => {
@@ -95,8 +99,9 @@
                                     setTimeout(() => {
                                         successMessage.innerHTML = "";
                                         newPasswordError.innerHTML = "";
+                                        confirmNewPasswordError.innerHTML = "";
                                         successMessage.innerHTML ="";
-                                    }, 3000);
+                                    }, 4000);
                                 }
                             }
     
@@ -108,8 +113,6 @@
                     else {
                         alert("همه ی فیلد ها را پر کنید !!!")
                     }
-
-
                 });
     </script>
 
