--- a/views/forgetPassword.ejs
+++ b/views/forgetPassword.ejs
@@ -11,7 +11,8 @@
                                 <h3 class="text-center" style="color:#727A80; font-weight: bold;">صفحه ی فراموشی رمز عبور 
                                 </h3>
                                 <div class="helpUser">
-                                    <ul class="text-info">
+                                    <ul class="text-success">
+                                        <li>در هنگام پر کردن فیلد ها مطمئن شوید کیبورد شما انگلیسی باشد</li>
                                         <li>به جای کلمه ی عبور شماره تماسی که در کلینیک ثبت شده است را وارد کنید</li>
                                     </ul>
                                 </div>
@@ -19,11 +20,11 @@
                             <div class="loginFormInputs flex-fill">
                                 <form class="forgetPasswordForm d-flex flex-column pt-3 mx-auto" style="width:75%; min-width:300px;">
                                     <label for="docNum"> * شماره پرونده:  </label>
-                                    <input type="text" name="docNum" id="docNum" value="" autofocus required>
+                                    <input type="number" name="docNum" id="docNum" value="" autofocus required>
                                     <span id="docNumError" class="mt-2 text-center text-danger">
                                         
                                     </span>
-                                    <label for="Tel" class="mt-3"> * کلمه عبور: </label>
+                                    <label for="Tel" class="mt-2"> * کلمه عبور: </label>
                                     <input type="text" name="Tel" id="Tel" required>
                                     <!-- <img src="img/invisible.png" id="PassVisibilityImg" width="24px"
                                     style="margin-top:-26px ;" alt="Tel visibility"> -->
@@ -31,10 +32,14 @@
                                         
                                     </span>
                                     <div class="d-block w-100 text-center">
-                                        <input type="submit"
-                                            class="forgetPassSubmit px-lg-5 px-xl-5 px-md-2 px-2 py-1 mt-xl-5 mt-lg-4"
-                                            value="احراز هویت" />
-
+                                        <!-- <input type="submit"
+                                            class="forgetPassSubmit px-5 py-1 mt-xl-5 mt-lg-4"
+                                            value="احراز هویت" /> -->
+                                            <button type="submit"
+                                            class="forgetPassSubmit px-5 py-1 mt-5">
+                                                احراز هویت
+                                                <i class="fa fa-spinner fa-spin forgetPassSpinner d-none" style="font-size:18px; color:white"></i>
+                                            </button>
                                         <p id="formErr" class="mt-2 text-center text-danger">
                                         </p>
                                     </div>
