--- a/views/layouts/clinicInformation.ejs
+++ b/views/layouts/clinicInformation.ejs
@@ -12,7 +12,7 @@
           style="vertical-align: middle"
         />
         <span id="clinicTitle" class="m-1">
-          درمانگاه تخصصی دندانپزشکی شهید منتظری
+          درمانگاه دندانپزشکی شهید منتظری
         </span>
       </div>
       <div class="flex-fill text-center">
