--- a/public/css/validationPages.css
+++ b/public/css/validationPages.css
@@ -55,14 +55,14 @@ body {
 }
 
 #formElements {
-    width: 80%;
-    height: 88%;
-    min-height: 400px;
-    border-radius: 61px;
-    background-color: #FFFFFF;
-    margin: 0px auto;
-    transform: translateY(7%);
-    box-shadow: 0 0 15px #c6c6c6;
+    width: 90%;
+    height: 100%;
+    min-height: 600px;
+    /* border-radius: 61px; */
+    /* background-color: #FFFFFF; */
+    margin: 5px auto;
+    /* transform: translateY(7%); */
+    /* box-shadow: 0 0 15px #c6c6c6; */
 }
 
 #clinicInfoContainer {
@@ -117,7 +117,7 @@ body {
     outline: none;
     color: #7796FF;
     font-size: 16px;
-    text-align: left;
+    direction: ltr;
 }
 
 #docNumber:focus,
