--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,8 @@
                                 <h3 class="text-center" style="color:#727A80; font-weight: bold;">صفحه ی ورود کاربران
                                 </h3>
                                 <div class="helpUser">
-                                    <ul>
+                                    <ul class="text-success">
+                                        <li>مطمئن شوید کیبورد شما انگلیسی باشد</li>
                                         <li>کلمه ی عبور شما در ابتدا شماره ثابت و یا شماره ی موبایلی هست که در کلینیک ثبت کرده اید</li>
                                         <li>شماره ثابت 7 یا 8 رقمی است که باید آنرا بدون پیشوند و خط فاصله و هیچگونه علامتی بنویسید (مثلا 77594621)</li>
                                         <li>شماره موبایلتان را با پیش شماره و بدون خط فاصله و صفر و 98+ بنویسید (مثلا 9125849856)</li>
@@ -23,11 +24,11 @@
                             <div class="loginFormInputs flex-fill">
                                 <form class="loginForm d-flex flex-column pt-3 mx-auto" style="width:75%; min-width:300px;">
                                     <label for="docNumber">شماره پرونده: </label>
-                                    <input type="text" name="docNumber" id="docNumber" value="" autofocus required>
+                                    <input type="number" name="docNumber" id="docNumber" value="" autofocus required>
                                     <span id="docNumberError" class="mt-2 text-center text-danger">
                                         
                                     </span>
-                                    <label for="Password" class="mt-3">کلمه عبور: </label>
+                                    <label for="Password" class="mt-1">کلمه عبور: </label>
                                     <input type="password" name="loginPassword" id="loginPassword" required>
                                     <img src="img/invisible.png" id="PassVisibilityImg" width="24px"
                                     style="margin-top:-26px ;" alt="password visibility">
